clang/test/BSC/Negative/Method/Union/union_conflict_param_type/union_conflict_param_type.cbs
// RUN: %clang_cc1 -verify %s

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int union SimpleUnion::getA(int a); // expected-note {{previous declaration is here}}
int union SimpleUnion::getA(union SimpleUnion * this) { // expected-error {{conflicting types for 'getA'}}
  return this->ui;
}